@startuml
'https://plantuml.com/class-diagram
hide empty members

interface CarInput {
    +wheelToRight(degrees: Int)
    +wheelToLeft(degrees: Int)
}

interface CarOutput {
    +getCurrentSpeed(): Int
}

interface Car {
    +plates: CarPlates
}
CarInput -up-|> Car
CarOutput -up-|> Car

class CarPlates
CarPlates -left-* Car


@enduml